Validation checks increased
Should now be complete, but may be a bug I missed. Tests updated to
reflect additions in validation, example.conf layout and comments
improved.

--- a/example.conf
+++ b/example.conf
@@ -1,17 +1,24 @@
-# '::' == key/value
-# key = value
+# Has provides commenting
+# You can't comment at the end of a line:
+this = cpfb # like this though
+
+::
+# :: is empty, so this is just $Name
+# Doesn't need indent to assign
+Name = cpfb
+
 ::Main_
-    Name = Pforb
-    Use = ConfigParser
-
-# '--' == array items
-# value
+	# :: is not empty, so this is $Main_Use
+	Use = ConfigParser
+	# This ket is invalid because of the unsafe character ';'
+	;Invalid = item
+	
 --MyArray
-    ArryItem0
-    SomeotherThing:
-
-# '==' == associative array
-# key = value
+	ArryItem0
+	# Array values can contain special characters
+	Some otherThing:
+	
 ==OtherArray
-    index = value
-    git = bestThing
+	index = value
+	# Spaces are truncated in key names: 'git git' => 'gitgit'
+	git git = bestThing;maybe
