Added CutSpaces example & test.
This demonstrates a fix since moving away from using tr. Also fixed a typo.

--- a/example.conf
+++ b/example.conf
@@ -10,14 +10,16 @@ Name = cpfb
 ::Main_
 	# :: is not empty, so this is $Main_Use
 	Use = ConfigParser
-	# This ket is invalid because of the unsafe character ';'
+	# This key is invalid because of the unsafe character ';'
 	;Invalid = item
-	
+	# We only cut spaces from the front and back
+	CutSpaces = A string with spaces
+
 --MyArray
 	ArryItem0
 	# Array values can contain special characters
 	Some otherThing:
-	
+
 ==OtherArray
 	index = value
 	# Spaces are truncated in key names: 'git git' => 'gitgit'
